--- a/index.html
+++ b/index.html
@@ -1,11 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="styles/style.css">
+        <title>Home</title>
+    </head>
+    <body>
+        <nav>
+            <a href="/" id="title">Alessandro Miaglia</a>
+            <ul id="links">
+                <li><a href="/about.html" id="about">About Me</a></li>
+                <li><a href="/projects.html" id="projects">Projects</a></li>
+                <li><a href="/contact.html" id="contact">Contact Me</a></li>
+            </ul>
+        </nav>
+    </body>
 </html>
